# darknet_cpp

./: CMakeLists.txt  README.md  darknet-config.cmake  live.cpp
examples/: live.cpp
include/darknet/: detector.hpp
src/: detector.cpp
